tests/basic/semantics/test_condition_nonboolean_errors.diag
tests/basic/semantics/test_condition_nonboolean_errors.bas:3:4: error[E1001]: Expected BOOLEAN condition, got INT. Consider '2 <> 0'.
IF 2 THEN PRINT 1
   ^
tests/basic/semantics/test_condition_nonboolean_errors.bas:5:7: error[E1001]: Expected BOOLEAN condition, got FLOAT. Consider '3.14 <> 0'.
WHILE 3.14
      ^
