tests/basic/semantics/test_condition_nonboolean_errors.bas
DIM COUNT AS INT

IF 2 THEN PRINT 1

WHILE 3.14
  PRINT COUNT
  LET COUNT = COUNT + 1
WEND
END
